--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,7 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$incredibly-small-screen: 325px;
 $very-small-screen: 560px;
 $small-desktop: 768px;
 $medium-desktop: 992px;
